<resources>
    <string name="app_name">Training Task 4</string>
    <string name="start_conversation">Start Conversation</string>
    <string name="title_activity_conversation" translatable="false">ConversationActivity</string>
    <string name="back_button" translatable="false">Back Button</string>
    <string name="compare_arrows" translatable="false">Compare Arrows</string>
    <string name="make_messages_seen" translatable="false">Make Messages Seen</string>
    <string name="make_messages_sent" translatable="false">Make Messages Sent</string>
    <string name="contact">Contact</string>
    <string name="online">online</string>
    <string name="type_a_message">Type a message</string>
    <string name="camera_button" translatable="false">Camera Button</string>
    <string name="send_button" translatable="false">Send Button</string>
    <string name="emoji_button" translatable="false">Emoji Button</string>
    <string name="typing">typing…</string>
    <string name="seconds_ago" translatable="false">\u0020seconds ago</string>
    <string name="just_now" translatable="false">Just now</string>
    <string name="minute_ago" translatable="false">\u0020minute ago</string>
    <string name="minutes_ago" translatable="false">\u0020minutes ago</string>
    <string name="hour_ago" translatable="false">\u0020hour ago</string>
    <string name="hours_ago" translatable="false">\u0020hours ago</string>
    <string name="day_ago" translatable="false">\u0020day ago</string>
    <string name="days_ago" translatable="false">\u0020days ago</string>
    <string name="week_ago" translatable="false">\u0020week ago</string>
    <string name="weeks_ago" translatable="false">\u0020weeks ago</string>
    <string name="month_ago" translatable="false">\u0020month ago</string>
    <string name="months_ago" translatable="false">\u0020months ago</string>
    <string name="year_ago" translatable="false">\u0020year ago</string>
    <string name="years_ago" translatable="false">\u0020years ago</string>
    <string name="message_state" translatable="false">Message State</string>
    <string name="message_empty">Can\'t send an empty message!</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="capture_video">Capture Video</string>
    <string name="photo_message" translatable="false">Photo Message</string>
</resources>